cmake_minimum_required(VERSION 3.10)
project(sudoku LANGUAGES CXX)

SET(CMAKE_CXX_FLAGS "-std=c++17")

function(add_to_test _name _source)
    add_executable(${_name} ${_source} Test.h)
    target_link_libraries(${_name} PRIVATE sudoku_lib)
    add_test(NAME ${_name} COMMAND ${_name})
endfunction()

add_to_test(test_hidden_multi TestHiddenMulti.cpp)
add_to_test(test_hidden_singles TestHiddenSingles.cpp)
add_to_test(test_locked_candidates TestLockedCandidates.cpp)
add_to_test(test_naked_multi TestNakedMulti.cpp)
add_to_test(test_naked_singles TestNakedSingles.cpp)
add_to_test(test_levels TestSolveLevel.cpp)
add_to_test(test_basic_fish TestBasicFish.cpp)
add_to_test(test_xwings TestXWings.cpp)
add_to_test(test_xywing TestXYWing.cpp)
